--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <title>inhale couch, you insect.</title>
    </head>
   <body>
-    <p style="text-align: center;"><span style="text-decoration: underline;"><em><strong>inhale couch club</strong></em></span></p>
+    <p style="text-align: center;"><span style="text-decoration: underline;"><em><strong>inhale couch rocks!</strong></em></span></p>
     <p style="text-align: center;">&nbsp;</p>
-    <p style="text-align: center;"><span style="text-decoration: underline;"><em><strong><img src="https://i.imgur.com/U53Lopd.png" alt="murm rocks!" width="1920" height="1800" /></strong></em></span></p>
+    <p style="text-align: center;"><span style="text-decoration: underline;"><em><strong><img src="https://i.imgur.com/U53Lopd.png" alt="inhale couch rocks!" width="1920" height="1800" /></strong></em></span></p>
   </body>
 </html>
